--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<% provide(:title, 'Contact Me') %>
+<h1>Contact Me</h1>
+<p>I can be contacted through my email, rodney.earl@alumni.ubc.ca</p>
