--- a/app/views/static_pages/work.html.erb
+++ b/app/views/static_pages/work.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#work</h1>
-<p>Find me in app/views/static_pages/work.html.erb</p>
+<% provide(:title, 'Work Experience') %>
+<h1>Work Experience</h1>
+<p>Hmm.  TBA</p>
